--- a/index.html
+++ b/index.html
@@ -60,10 +60,17 @@
         <div class="product__list">
             <div class="product__scope">
                 <div class="product__scope__wrap">
-                    <button class="scope__btn" type="button">
+                    <button class="scope__btn" type="button" id="scope__btn">
                         <span class="btn__text">По умолчанию</span>
                         <span class="btn__arrow__down"></span>
                     </button>
+                    <div class="scope__list" id="scope__list">
+                        <ul class="scope__list__wrap">
+                            <li class="scope__list__item" data-scope="min">По возрастанию</li>
+                            <li class="scope__list__item" data-scope="max">По убыванию</li>
+                            <li class="scope__list__item" data-scope="abc">По наименованию</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
             <div class="product__list__wrap" id="product__list__wrap"></div>
@@ -76,6 +83,8 @@
     <script src="modules/priceMask.js" type="text/javascript"></script>
     <script src="modules/deleteProduct.js" type="text/javascript"></script>
     <script src="modules/app.js" type="text/javascript"></script>
+    <script src="modules/scope.js" type="text/javascript"></script>
+
 </body>
 
 </html>
