--- a/index.html
+++ b/index.html
@@ -73,17 +73,21 @@
                     </div>
                 </div>
             </div>
-            <div class="product__list__wrap" id="product__list__wrap"></div>
+            <div class="product__list__wrap" id="product__list__wrap">
+                <div class="preloader">
+                    <div class="loading-spinner"></div>
+                </div>
             </div>
         </div>
+    </div>
     </div>
 
     <script src="modules/ProductList.js" type="text/javascript"></script>
     <script src="modules/validation.js" type="text/javascript"></script>
     <script src="modules/priceMask.js" type="text/javascript"></script>
     <script src="modules/deleteProduct.js" type="text/javascript"></script>
-    <script src="modules/app.js" type="text/javascript"></script>
     <script src="modules/scope.js" type="text/javascript"></script>
+    <script src="modules/app.js" type="text/javascript"></script>
 
 </body>
 
